--- a/kubernetes-manifests/loadgenerator.yaml
+++ b/kubernetes-manifests/loadgenerator.yaml
@@ -67,7 +67,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: loadgenerator
+        image: 17rj/microservice-loadgeneratorserice
         env:
         - name: FRONTEND_ADDR
           value: "frontend:80"
